--- a/login/templates/login/index.html
+++ b/login/templates/login/index.html
@@ -6,5 +6,9 @@
 </head>
 <body>
 <h1>这是主页</h1>
+<h2>{{ request.session.user_name }} 欢迎回来</h2>
+<p>
+    <a href="/logout/">登出</a>
+</p>
 </body>
 </html>
